# phalanx

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CODEOWNERS  LICENSE  Makefile  README.md  README.rst  ct.yaml  helm-docs.md.gotmpl  pyproject.toml  renovate.json  ruff-shared.toml  tox.ini
.github/: dependabot.yml
.github/scripts/: codeowner_check.py
.github/workflows/: ci.yaml  codeowner-approval.yaml  dependencies.yaml  docs.yaml  linkcheck.yaml  minikube.yaml  rebasecheck.yaml  yamllint.yml
applications/alert-stream-broker/: Chart.yaml  README.md  secrets-idfint.yaml  secrets.yaml  values-idfint.yaml  values-usdfdev-alert-stream-broker.yaml  values-usdfdev-ap.yaml  values-usdfdev.yaml  values.yaml
applications/alloydb-auth-proxy/: Chart.yaml  README.md  secrets.yaml  values-usdfdev.yaml  values.yaml
applications/argo-workflows/: Chart.yaml  README.md  values-idfdev.yaml  values-tucson-teststand.yaml  values.yaml
applications/argocd/: Chart.yaml  README.md  secrets.yaml  values-awsdev.yaml  values-base.yaml  values-ccin2p3.yaml  values-idfdemo.yaml  values-idfdev.yaml  values-idfint.yaml  values-idfprod.yaml  values-minikube.yaml  values-roe.yaml  values-roundtable-dev.yaml  values-roundtable-prod.yaml  values-rsptest.yaml  values-summit.yaml  values-tacc-spherex-dev.yaml  values-tacc-spherex.yaml  values-tacc.yaml  values-tucson-teststand.yaml  values-ukidacdev.yaml  values-ukidacprod.yaml  values-usdf-alert.yaml  values-usdf-cm-dev.yaml  values-usdf-cm.yaml  values-usdf-rapid-analysis-dev.yaml  values-usdf-rapid-analysis.yaml  values-usdf-tel-rsp.yaml  values-usdfdev-alert-stream-broker.yaml  values-usdfdev-ap.yaml  values-usdfdev-prompt-processing.yaml  values-usdfdev.yaml  values-usdfint.yaml  values-usdfprod-prompt-processing.yaml  values-usdfprod.yaml  values.yaml
applications/atlantis/: Chart.yaml  README.md  secrets.yaml  values-roundtable-dev.yaml  values-roundtable-prod.yaml  values.yaml
applications/auxtel/: Chart.yaml  README.md  secrets-base.yaml  secrets-summit.yaml  secrets-tucson-teststand.yaml  secrets.yaml  values-base.yaml  values-summit.yaml  values-tucson-teststand.yaml  values.yaml
applications/bigquery-kafka/: Chart.yaml  README.md  secrets.yaml  values-idfdev.yaml  values-idfint.yaml  values.yaml
applications/bootcamp-hfc/: Chart.yaml  README.md  values-idfdemo.yaml  values.yaml
applications/butler-example-service/: Chart.yaml  README.md  values.yaml
applications/butler-writer-service/: Chart.yaml  README.md  secrets.yaml  values-usdfdev-prompt-processing.yaml  values.yaml  (+1 more)
argo-cd/: argo-cd-values.yaml  base-values.yaml  create.sh  destroy.sh  helm-create.sh  kueyen-values.yaml  lsst-lsp-int-values.yaml  lsst-lsp-stable-values.yaml  summit-values.yaml  tucson-teststand-values.yaml
bleed/: argo-cd-values.yaml  initial-resources.yaml  install.sh
charts/: README.md
develop-gke/: README.md  install_ingress.sh  install_lsp.sh  install_tiller.sh  nginx-ingress.yaml  nublado-values.yaml  public_ip.sh  uninstall_ingress.sh  uninstall_lsp.sh
docs/: .gitignore  Makefile  _rst_epilog.rst  bootstrapping.rst  conf.py  documenteer.toml  index.rst  introduction.rst  requirements.txt
environments/: Chart.yaml  README.md  values-awsdev.yaml  values-base.yaml  values-ccin2p3.yaml  values-idfdemo.yaml  values-idfdev.yaml  values-idfint.yaml  values-idfprod.yaml  values-minikube.yaml  values-roe.yaml  values-roundtable-dev.yaml  values-roundtable-prod.yaml  values-rsptest.yaml  values-summit.yaml  values-tacc-spherex-dev.yaml  values-tacc-spherex.yaml  values-tacc.yaml  values-tucson-teststand.yaml  values-ukidacdev.yaml  values-ukidacprod.yaml  values-usdf-alert.yaml  values-usdf-cm-dev.yaml  values-usdf-cm.yaml  values-usdf-rapid-analysis-dev.yaml  values-usdf-rapid-analysis.yaml  values-usdf-tel-rsp.yaml  values-usdfdev-alert-stream-broker.yaml  values-usdfdev-ap.yaml  values-usdfdev-prompt-processing.yaml  values-usdfdev.yaml  values-usdfint.yaml  values-usdfprod-prompt-processing.yaml  values-usdfprod.yaml  values.yaml
gen_config/: telegraf-generator
infrastructure/: Chart.yaml  README.md  values-base.yaml  values-bleed.yaml  values-gold-leader.yaml  values-int.yaml  values-nts.yaml  values-nublado.yaml  values-red-five.yaml  values-rogue-two.yaml  values-stable.yaml  values-summit.yaml  values-tucson-teststand.yaml  values.yaml
installer/: argo-cd-values.yaml  generate_secrets.py  get_secrets.sh  initial-resources.yaml  install.sh  installation-notes.md  migration_script.sh  push_secrets.sh  read_secrets.sh  requirements.txt  update_all_secrets.sh  update_secrets.sh  vault_key.py  write_secrets.sh
logging/: Dockerfile.kibana_no_security  README.md  create.sh  destroy.sh  es-values.yaml  fluentd-es-values.yaml  ingress-int.yaml  ingress.yaml  kibana-values.yaml
lsst-lsp-int/: cadc-tap.yaml  landing-page.yaml  nublado.yaml  portal.yaml
lsst-lsp-stable/: cadc-tap.yaml  landing-page.yaml  nublado.yaml  portal.yaml
op/: README.md  base.env  idfdemo.env  idfdev.env  idfint.env  idfprod.env  minikube.env  roundtable-dev.env  roundtable-prod.env  summit.env  tucston-teststand.env
requirements/: dev.in  dev.txt  main.in  main.txt  tox.txt
science-platform/: Chart.yaml  README.md  requirements.yaml  values-base.yaml  values-bleed.yaml  values-ccin2p3.yaml  values-ccin2p3test.yaml  values-gold-leader.yaml  values-google.yaml  values-idfdev.yaml  values-idfint.yaml  values-idfprod.yaml  values-int.yaml  values-minikube.yaml  values-nts.yaml  values-nublado.yaml  values-red-five.yaml  values-roe.yaml  values-rogue-two.yaml  values-squash-sandbox.yaml  values-stable.yaml  values-summit.yaml  values-tucson-teststand.yaml  values-usdfdev.yaml  values-usdfprod.yaml  values.yaml
science-platform-base/: Chart.yaml
science-platform-int/: Chart.yaml
science-platform-nts/: Chart.yaml
science-platform-stable/: Chart.yaml
science-platform-summit/: Chart.yaml
science-platform-tucson-teststand/: Chart.yaml
starters/: README.md
tests/: config_test.py  conftest.py  expand-services  packaging_test.py
(+4996 files in other folders)
